Update team name and adjust styling

--- a/about-our-team.html
+++ b/about-our-team.html
@@ -413,7 +413,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-title-item-title-wrap  gdlr-core-with-divider">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 33px ;letter-spacing: 0px ;text-transform: none ;color: #111111 ;">Super Team .</h3>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 33px ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">Meet The Team</h3>
                                                         <div class="gdlr-core-title-item-divider gdlr-core-right gdlr-core-skin-divider" style="border-color: #9a827d ;"></div>
                                                     </div>
                                                 </div>
