Update font-weight and font-size in CSS files

--- a/portfolio-masonry-3-columns.html
+++ b/portfolio-masonry-3-columns.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="inteco-mobile-menu-right">
-                    <div class="inteco-main-menu-search" id="inteco-mobile-top-search"><i class="fa fa-search"></i></div>
+                    <!-- <div class="inteco-main-menu-search" id="inteco-mobile-top-search"><i class="fa fa-search"></i></div> -->
                     <div class="inteco-top-search-wrap">
                         <div class="inteco-top-search-close"></div>
 
@@ -162,7 +162,7 @@
                 </div>
                 <div class="inteco-page-title-container inteco-container">
                     <div class="inteco-page-title-content inteco-item-pdlr">
-                        <h1 class="inteco-page-title" style="padding-bottom: 20px;">Constructing  Dreams into  <br> Reality</h1>
+                        <h1 class="inteco-page-title" style="padding-bottom: 20px; font-size: 96px;">Constructing  Dreams into  <br> Reality</h1>
                         <div class="inteco-page-caption"></div>
                     </div>
                 </div>
