--- a/about-us.html
+++ b/about-us.html
@@ -141,8 +141,8 @@
                 <div class="inteco-header-transparent-substitute"></div>
                 <div class="inteco-page-title-overlay"></div>
                 <div class="inteco-page-title-container inteco-container">
-                    <div class="inteco-page-title-content inteco-item-pdlr">
-                        <h1 class="inteco-page-title">About Us</h1>
+                    <div class="inteco-page-title-content inteco-item-pdlr" style="padding-bottom: 200px;">
+                        <h1 class="inteco-page-title" style="font-size: 96px; font-weight: 500;">About Us</h1>
                         <div class="inteco-page-caption">Know Us Better</div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px ;"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 23px ;font-weight: 700 ;font-style: normal ;color: #7f7f7f ;margin-bottom: 0px ;">Who we are</span>
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 39px ;font-weight: 900 ;letter-spacing: 0px ;text-transform: none ;color: #232323 ;">Our Story .</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 39px ;font-weight: 900 ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">Our Story</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -236,9 +236,9 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 0px 60px 0px 0px;">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 19px ;font-weight: 800 ;font-style: normal ;color: #7f7f7f ;">Our Story</span>
+                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 27px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #232323 ;">History About Us</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 27px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">History About Us</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -257,7 +257,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 28px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #232323 ;">Our Expertise .</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 28px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">Our Expertise .</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -266,12 +266,6 @@
                                                         <div class="gdlr-core-skill-bar-head gdlr-core-title-font"><span class="gdlr-core-skill-bar-title">Interior Design</span><span class="gdlr-core-skill-bar-right">85%</span></div>
                                                         <div class="gdlr-core-skill-bar-progress">
                                                             <div class="gdlr-core-skill-bar-filled gdlr-core-js" data-width="85" style="background-color: #008080; ;"></div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="gdlr-core-skill-bar">
-                                                        <div class="gdlr-core-skill-bar-head gdlr-core-title-font"><span class="gdlr-core-skill-bar-title">AutoCAD</span><span class="gdlr-core-skill-bar-right">75%</span></div>
-                                                        <div class="gdlr-core-skill-bar-progress">
-                                                            <div class="gdlr-core-skill-bar-filled gdlr-core-js" data-width="75" style="background-color: #008080; ;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="gdlr-core-skill-bar">
@@ -318,7 +312,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 6px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #000000 ;">
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">
                                                             QUALITY</h3></div>
                                                 </div>
                                             </div>
@@ -339,7 +333,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 6px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #000000 ;">DELIGHT</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">DELIGHT</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -359,7 +353,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 6px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #000000 ;">INNOVATION</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 19px ;letter-spacing: 0px ;text-transform: none ;color: #008080 ;">INNOVATION</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
