--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 75px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;">Contact Us</h3></div><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 25px ;font-style: normal ;color: #f2f2f2 ;margin-top: 25px ;">Get Intouch</span></div>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 96px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;">Contact Us</h3></div><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 25px ;font-style: normal ;color: #f2f2f2 ;margin-top: 25px ;">Get Intouch</span></div>
                                 </div>
                             </div>
                         </div>
@@ -311,9 +311,9 @@
                                                                 </div>
                                                                 <p>
                                                                     <!-- Begin Submit button -->
-                                                                    <div class="quform-submit">
+                                                                    <div class="quform-submit" style="background-color: #008080;">
                                                                         <div class="quform-submit-inner">
-                                                                            <button type="submit" class="submit-button"><span>Send</span></button>
+                                                                            <button type="submit" class="submit-button" style="background-color: #008080;"><span>Send</span></button>
                                                                         </div>
                                                                         <div class="quform-loading-wrap"><span class="quform-loading"></span></div>
                                                                     </div>
