Update image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                                         </div>
 
                                                         <!-- LAYER NR. 2 -->
-                                                        <div class="tp-caption   tp-resizeme" id="slide-2-layer-3" data-x="500" data-y="center" data-voffset="-18" data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":680,"speed":8000,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":200,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 6; white-space: nowrap; font-size: 96px; line-height: 1em; font-weight: 500; color: #ffffff; letter-spacing: 0px;font-family:'Urbanist' sans-serif;">
+                                                        <div class="tp-caption   tp-resizeme" id="slide-2-layer-3" data-x="500" data-y="center" data-voffset="-18" data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":680,"speed":1000,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 6; white-space: nowrap; font-size: 96px; line-height: 1em; font-weight: 500; color: #ffffff; letter-spacing: 0px;font-family:'Urbanist' sans-serif;">
                                                         into structures
                                                         </div>
 
@@ -637,7 +637,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/port-1.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/port-1-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -658,7 +658,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/gdtography-310706-unsplash.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/gdtography-310706-unsplash-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -679,7 +679,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_627788162.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_627788162-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -700,7 +700,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/hutomo-abrianto-576207-unsplash.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/hutomo-abrianto-576207-unsplash-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -721,7 +721,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_578977615.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_578977615-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -742,7 +742,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_631879034.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/shutterstock_631879034-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -763,7 +763,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/tobias-van-schneider-230813-unsplash.jpg" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/tobias-van-schneider-230813-unsplash-700x430.jpg" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
@@ -784,7 +784,7 @@
 																		<a href="#" ></a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
-																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/davide-cantelli-240809-unsplash.jpg" data-sub-html="Minimal Interior Design" data-lightbox-group="gdlr-core-img-group-2">
+																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/davide-cantelli-240809-unsplash-700x430.jpg" data-sub-html="Minimal Interior Design" data-lightbox-group="gdlr-core-img-group-2">
 																			<i class="gdlr-core-portfolio-icon arrow_expand" ></i>
 																		</a>
 																	</span>
