--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px ;margin-left: 0px ;"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 21px ;font-style: normal ;margin-bottom: 2px ;">Our Approach</span>
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 34px ;letter-spacing: 0px ;text-transform: none ; letter-spacing: -0.1px; color: #008080;">Concept & Details .</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 34px ;letter-spacing: 0px ;text-transform: none ; letter-spacing: -0.1px; color: #008080;">Concept & Details</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -393,7 +393,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px ;margin-left: 0px ;"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 21px ;font-style: normal ;margin-bottom: 2px ;">We Make</span>
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 34px ;letter-spacing: 0px ;text-transform: none ; color:#008080" >Perfection .</h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 34px ;letter-spacing: 0px ;text-transform: none ; color:#008080" >Perfection</h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -614,6 +614,8 @@
                             </div>
                         </div>
                     </div>
+
+                    
                     <div class="gdlr-core-pbf-wrapper  gdlr-core-hide-in-desktop-tablet" style="padding: 90px 0px 30px 0px;" id="gdlr-core-wrapper-3">
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -622,9 +624,10 @@
                                     <div class="gdlr-core-portfolio-item gdlr-core-item-pdb clearfix  gdlr-core-portfolio-item-style-modern-no-space gdlr-core-item-pdlr">
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align" style="margin-left: 120px ;margin-bottom: 67px ;">
                                             <div class="gdlr-core-block-item-title-inner">
-                                                <h3 class="gdlr-core-block-item-title" style="font-size: 33px ;text-transform: none ;letter-spacing: 0px ; color: #008080";>Our Works .</h3><span class="gdlr-core-separator" style="border-color: #008080 ;"></span><a class="gdlr-core-block-item-read-more" href="portfolio-masonry-3-columns.html" target="_self" style="font-size: 16px ;color: #968481 ;">View All Works</a></div>
-                                        </div>
-										                                        
+                                                <h3 class="gdlr-core-block-item-title" style="font-size: 40px ;text-transform: none ;letter-spacing: 0px ; color: #008080; margin-bottom: -40px;">Our Works</h3><span class="gdlr-core-separator" style="border-color: #008080 ;"></span>
+                                            </div>
+                                        </div> 
+
 										<div class="gdlr-core-portfolio-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
 											<div class="gdlr-core-item-list  gdlr-core-column-20 gdlr-core-column-first">
 												<div class="gdlr-core-portfolio-modern">
@@ -924,7 +927,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align" style="margin-bottom: 22px ;">
                                                     <div class="gdlr-core-divider-container" style="max-width: 140px ;">
-                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #968481 ;"></div>
+                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #000000 ;"></div>
                                                     </div>
                                                 </div>
                                             </div>
