--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="inteco-mobile-header-container inteco-container clearfix">
                 <div class="inteco-logo  inteco-item-pdlr">
                     <div class="inteco-logo-inner">
-                        <a class="" href="index.html"><img src="upload/logo.png" alt="" width="200" height="39" title="logo"; /></a>
+                        <a class="" href="index.html";><img src="upload/logo.png" alt="" width="200" height="39" title="logo"; /></a>
                     </div>
                 </div>
                 <div class="inteco-mobile-menu-right">
@@ -851,7 +851,7 @@
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15 gdlr-core-column-first">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -863,7 +863,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -875,19 +875,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb ">
-                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="12">0</span><span class="gdlr-core-counter-item-suffix">+</span></div>
-                                                    <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 18px ;">Awards winning</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
