--- a/about-us.html
+++ b/about-us.html
@@ -146,17 +146,23 @@
                 <!-- header -->
             </div>
 
-
-            <div class="inteco-page-title-wrap  inteco-style-large inteco-center-align">
-                <div class="inteco-header-transparent-substitute"></div>
-                <div class="inteco-page-title-overlay"></div>
-                <div class="inteco-page-title-container inteco-container">
-                    <div class="inteco-page-title-content inteco-item-pdlr" style="padding-bottom: 200px;">
-                        <h1 class="inteco-page-title" style="font-size: 96px; font-weight: 500;">About Us</h1>
-                        <div class="inteco-page-caption">Know Us Better</div>
+            <div class="inteco-page-title-wrap  inteco-style-medium inteco-center-align">
+                <div class="gdlr-core-pbf-wrapper " style="padding: 180px 0px 110px 0px;" id="gdlr-core-wrapper-1">
+                    <div class="gdlr-core-pbf-background-wrap">
+                        <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-size: cover ;background-position: center center ; height: 378px;" data-parallax-speed="0.3"></div>
+                    </div>
+                    <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
+                        <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                            <div class="gdlr-core-pbf-element" style="margin-top: 60px;">
+                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
+                                    <div class="gdlr-core-title-item-title-wrap ">
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 96px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;" data-orig-font="96px">About Us</h3></div><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 25px ;font-style: normal ;color: #f2f2f2 ;margin-top: 5px ;">Know Us Better</span></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="inteco-page-wrapper" id="inteco-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
                     <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;">
