--- a/portfolio-masonry-3-columns.html
+++ b/portfolio-masonry-3-columns.html
@@ -166,18 +166,26 @@
 
 
 
-            <div class="inteco-page-title-wrap  inteco-style-medium inteco-center-align">
-                <div class="inteco-header-transparent-substitute"></div>
-                <div class="inteco-page-title-overlay">
-                    
-                </div>
-                <div class="inteco-page-title-container inteco-container">
-                    <div class="inteco-page-title-content inteco-item-pdlr">
-                        <h1 class="inteco-page-title" style="padding-bottom: 20px; font-size: 96px;">Constructing  Dreams into  <br> Reality</h1>
-                        <div class="inteco-page-caption"></div>
+            <div class="wrap" style="background-image: url(upload/portfolio-bg.jpg) ; background-size: cover ;">
+                <div class="gdlr-core-pbf-wrapper " style="padding: 150px 0px 90px 0px;" id="gdlr-core-wrapper-1">
+                    <div class="gdlr-core-pbf-background-wrap">
+                        <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-position: center center ; height: 378px;" data-parallax-speed="0.3"></div>
+                    </div>
+                    <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
+                        <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                            <div class="gdlr-core-pbf-element" style="margin-top: 100px;">
+                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
+                                    <div class="gdlr-core-title-item-title-wrap ">
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 96px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;" data-orig-font="96px">Constructing  Dreams into <br> Reality</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
+        
             <div class="inteco-page-wrapper" id="inteco-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
                     <div class="gdlr-core-pbf-wrapper ">
@@ -300,6 +308,16 @@
                                                 <div class="gdlr-core-portfolio-metro">
                                                     <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-icon-title-tag  gdlr-core-metro-rvpdlr">
                                                         <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/pexels-photo-227675-1260x501.jpg" alt="" width="1260" height="501" title="pexels-photo-227675" /><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js"><span class="gdlr-core-image-overlay-content" ><span class="gdlr-core-portfolio-icon-wrap" ><a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/pexels-photo-227675-1260x501.jpg" data-sub-html="The new concept" data-lightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon arrow_expand" ></i></a></span><span class="gdlr-core-portfolio-title gdlr-core-title-font " style="font-size: 19px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;"><a href="../portfolio/volki-building-exterior-design/index.html" ></a></span><span class="gdlr-core-portfolio-info gdlr-core-portfolio-info-tag gdlr-core-info-font"><a href="#" rel="tag"></a></span></span>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
+                                                <div class="gdlr-core-portfolio-metro">
+                                                    <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-icon-title-tag  gdlr-core-metro-rvpdlr">
+                                                        <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/hutomo-abrianto-576207-unsplash-630x1002-2.jpg" alt="" width="630" height="902" title="hutomo-abrianto-576207-unsplash" /><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js"><span class="gdlr-core-image-overlay-content" ><span class="gdlr-core-portfolio-icon-wrap" ><a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/hutomo-abrianto-576207-unsplash-630x1002.jpg" data-lightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon arrow_expand" ></i></a></span><span class="gdlr-core-portfolio-title gdlr-core-title-font " style="font-size: 19px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;"><a href="#" ></a></span><span class="gdlr-core-portfolio-info gdlr-core-portfolio-info-tag gdlr-core-info-font"><a href="#" rel="tag"></a> <span class="gdlr-core-sep"></span> <a href="#" rel="tag"></a></span>
+                                                            </span>
                                                             </span>
                                                         </div>
                                                     </div>
